# shopping_list

./: .gitignore  Cargo.toml  new_list.txt  test.txt
recipe_editor/: generator.js  index.html  styles.css
src/: app.rs  main.rs  shopping_list.rs
src/recipe/: mod.rs  unit.rs
src/ui/: ext.rs  mod.rs
