[package]
name = "shopping_list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dependencies."cursive"]
version = "0.20"
default-features = false
features = ["crossterm-backend"]